# cuda-cmake-gtest-gbench-starter

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
bench/: CMakeLists.txt  mm.cc
cmake/Modules/: FindMath.cmake
include/deepgreen/: matrix.hh  matrix_mm.cuh  matrix_mm.hh
src/: CMakeLists.txt  matrix_mm.cu
test/: CMakeLists.txt  matrix_mult_test.cc  matrix_test.cc
